# llm-your-business

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  go.work  index.ts  package.json  plan.md
.tmpbuild3958/: go.work.sum
.tmpbuild3958/services/suggestions/: Dockerfile
schemas/: objective.datapoint.v1.json  objective.execution.answer.v1.json  objective.execution.question.v1.json  objective.manifest.v1.json
schemas/common/: data_point.v1.json  language.v1.json  model.v1.json  persona.v1.json  question_type.v1.json
schemas/event/: objective.datapoint.v1.json  objective.execution.answer.v1.json  objective.execution.question.v1.json  objective.manifest.v1.json
schemas/go/: Makefile  go.mod
schemas/go/events/: .gitignore
schemas/model/: objective.v1.json  objective_run.v1.json  objective_target.v1.json  question.v1.json  run_schedule.v1.json
services/client/: .gitignore  Dockerfile  package.json  vite.config.ts
services/client-api/: .env.example  .gitignore  Dockerfile  index.ts  package.json  routes.ts  tsconfig.json
services/client-api/controllers/: dashboard.controller.ts  evaluation.controller.ts  execution.controller.ts  objective.controller.ts  partner.controller.ts  persona.controller.ts  product.controller.ts
services/client-api/lib/: case.ts
services/client-api/repositories/: evaluation.repository.ts  execution.repository.ts  objective.repository.ts  partner.repository.ts  persona.repository.ts  product.repository.ts
services/client-api/services/: dashboard.service.ts  evaluation.service.ts  execution.service.ts  objective.service.ts  partner.service.ts  persona.service.ts  product.service.ts
services/client/src/: App.tsx  main.tsx
services/db/: .gitignore  api-types.ts  package.json  types.ts  validation.ts
services/db/prisma/: schema.prisma  seed.ts
services/go/models/: go.mod  persona.go  question_types.go  (+3 more)
services/llm/: .gitignore  Dockerfile  README.md  pyproject.toml  send_test_event.py  setup.sh
services/llm/src/: main.py
services/llm/src/agents/: agent_factory.py  base_agent.py  competitor_agent.py  pros_cons_agent.py  recommendation_agent.py
services/llm/src/config/: settings.py
services/llm/src/services/: database_service.py  kafka_consumer.py  kafka_producer.py  llm_processor.py
services/llm/src/utils/: exceptions.py  helpers.py  logger.py
services/scheduler/: Dockerfile  Makefile  README.md  go.mod
services/suggestions/: Dockerfile  go.mod
(+39 files in other folders)
